# ESP32S3_DRONE

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  test-docker.sh
.devcontainer/: devcontainer.json
components/control/: CMakeLists.txt
components/control/include/: DroneState.hpp  DroneTypes.hpp
components/driver/: spi.cpp
components/driver/include/: spi.hpp
components/interface/: CMakeLists.txt
components/interface/include/: BusInterface.hpp  ImuInterface.hpp
components/r_control/: CMakeLists.txt
components/r_control/include/: DroneTypes.hpp
components/r_hardware/: readme.txt
components/r_interface/: CMakeLists.txt
components/r_interface/include/: BusInterface.hpp  ImuInterface.hpp
components/r_qgc/: readme.txt
components/r_sensor/: CMakeLists.txt  Icm20948.cpp  readme.txt
components/r_sensor/include/: Icm20948.hpp  (+1 more)
components/r_service/: CMakeLists.txt  SensorTask.cpp  readme.txt
components/ryu_control/: CMakeLists.txt  readme.txt  ryu_DroneTypes.hpp  ryu_FlightTask.cpp  ryu_FlightTask.hpp  ryu_SensorTask.cpp  ryu_SensorTask.hpp
components/ryu_control/include/: DroneTypes.hpp
components/ryu_controller/: CMakeLists.txt  ryu_FlightTask.cpp  ryu_FlightTask.hpp  ryu_SensorTask.cpp
components/ryu_driver/: CMakeLists.txt  readme.txt  ryu_i2c.cpp  ryu_i2c.hpp  ryu_spi.cpp  ryu_spi.hpp
components/ryu_filter/: CMakeLists.txt  ryu_KalmanFilter.cpp  ryu_KalmanFilter.h  ryu_KalmanFilter.hpp
components/ryu_interface/: CMakeLists.txt  ryu_BusInterface.hpp  ryu_ImuInterface.hpp
components/ryu_qgc/: CMakeLists.txt  ryu_ParamTable.hpp  ryu_mavlink.cpp  ryu_mavlink.h  ryu_mavlink.hpp
components/ryu_sensor/: CMakeLists.txt  Icm20948.cpp  Icm20948.hpp  VirtualSendor.hpp  readme.txt  ryu_ICM20948.cpp  ryu_ICM20948.hpp  ryu_IST8310.cpp  ryu_IST8310.hpp  ryu_gps.cpp  ryu_gps.hpp
components/ryu_sensor/include/: Icm20948.hpp
components/ryu_service/: BaroSensorTask.cpp  CMakeLists.txt  SensorTask.cpp  readme.txt  ryu_BaroSensorTask.cpp  ryu_BaroSensorTask.hpp  ryu_SensorTask.cpp  ryu_SensorTask.hpp  ryu_espnow.cpp  ryu_espnow.hpp  ryu_timer.cpp  ryu_timer.hpp
components/ryu_system/: CMakeLists.txt  readme.txt  ryu_Config.hpp  ryu_DroneConfig.hpp  ryu_DroneTypes.hpp  ryu_Types.hpp
components/ryu_util/: AngleTranformer.hpp  CMakeLists.txt  SharedDataManager.hpp  ryu_AngleTranformer.hpp  ryu_AutoCalibrator.hpp  ryu_FrameTransformer.hpp  ryu_MagHeadingCalculator.hpp  ryu_SharedDataManager.hpp
components/sensor/: CMakeLists.txt  Icm20948.cpp
components/service/: BaroSensorTask.cpp  CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.cpp  readme.txt
(+10 files in other folders)
